--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
